style.css
/*
Theme Name: The Horace Mann Record
Theme URI: http://www.pena-alcantara.com/aramael
Description: A minimalistic, simple theme for WordPress -- supports widgets in the sidebar, all manors of post/page formatting and comes with an easy to customize stylesheet. 

Author: Aramael Pena-Alcantara
Version: 1.0
Tags: newspaper, magazine, elegant
*/
/****************************AUTOFOCUS HOME ***********************/
html.autofocus p.headline {
	border-bottom:1px solid #FFF;
	width:100%;
	margin:0 0 10px 0;
}
html.autofocus p.headline a:link, html.autofocus p.headline a:visited {
	color:#fff;
	font:bold 14px Arial, Helvetica, sans-serif;
	text-decoration:none;
}
html.autofocus p.headline a:hover {
	color:#fff;
	font:14px Arial, Helvetica, sans-serif;
	text-decoration:none;
}
html.autofocus p.headline a:active {
	color:#fff;
	font:bold 14px Arial, Helvetica, sans-serif;
	text-decoration:none;
}
html.autofocus p {
	font:11px Arial, Helvetica, sans-serif;
	color:#999999;
}
html.autofocus p.timestamp {
	font: 14px Arial, Helvetica, sans-serif;
	text-align:left;
	color:#FFF;
}
html.autofocus h2.headline {
	font:bold 36px "Arial Black", Gadget, sans-serif;
	color:#FFF;
	text-align:left;
}
html.autofocus p.byline, html.autofocus p.timestamp, html.autofocus p.categories {
	font:12px Arial, Helvetica, sans-serif;
	color:#999;
}
html.autofocus .byline:before {
	content:"By "
}
html.autofocus p.byline a:link, html.autofocus p.byline a:visited {
	color:#999;
	text-decoration:none;
}
html.autofocus p.byline a:hover {
	color:#999;
	text-decoration:underline;
}
html.autofocus p.byline a:active {
	color:#999;
	font-weight:bold;
	text-decoration:underline;
}
html.autofocus .categories a, html.autofocus .edit a {
	color:#FFF;
}
html.autofocus .wp-caption {
	border:1px solid #999;
	background:#000;
	margin:0 0 15px 0;
	padding:5px 0 0 0;
}
html.autofocus .wp-caption-text {
	font:12px Arial, Helvetica, sans-serif;
	color:#FFF;
	margin:0 0 10px 0;
	padding:0 10px 0 10px;
}
html.autofocus .media-credit {
	font:12px Arial, Helvetica, sans-serif;
	color:#fff;
}
html.autofocus .media-credit a {
	color:#FFF;
}

/****************************SIDEBAR*******************************/
#sidebar{
	float: right;
	position:relative;
	top:20px;
	padding:15px;
	width:238px;
	text-align:justify;
}
#sidebar h1 {
	font:bold 18px Arial, Helvetica, sans-serif;
	text-transform:uppercase;
	text-align:center;
	color: #58020f;
	display:block;
	border-top: 1px solid #d3aca3;
	border-bottom: 1px solid #d3aca3;
	margin:10px 0 10px 0;
}
#sidebar ul {
	margin:0 0 0 5px;
	padding:0;
}
#sidebar li {
	list-style:none;
	margin:0;
	padding:0;
	font:bold 12px Arial, Helvetica, sans-serif;
}
#sidebar p {
	font:bold 12px Arial, Helvetica, sans-serif;
}
#sidebar a:link, #sidebar a:visited {
	color:#000;
	text-decoration:none;
}
#sidebar a:hover {
	color:#892846;
	text-decoration:none;
}
#sidebar a:active {
	color:#892846;
	text-decoration:underline;
}
#sidebar label {
	display:block;
	font-size:13px;
	font-weight:bold;
	text-align:center;
	line-height:18px;
	cursor:pointer;
	position:relative;
}
#sidebar input {
	display:block;
	margin:0 0 10px 25px;
	background:url(images/input-bg.png) #FFF;
	border:1px solid #BBB;
	-webkit-border-radius:2px;
	-webkit-box-shadow:0 1px 1px #fff;
	font:12px/18px Helvetica Neue, Arial
	text-shadow: 0 0 1px #fff;
	color:#999;
	width:182px;
	position:relative;
	z-index:2;
	line-height:18px;
}
#sidebar input[type=text] {
	height:30px;
}
#sidebar input[type=submit] {
	padding: 6px 10px;
	margin:0 0 0 25px;
	-webkit-border-radius: 2px 2px;
	border: solid 1px rgb(153, 153, 153);
	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(137, 40, 70)), to(rgb(88, 2, 15)));
	color: #FFF;
	text-decoration: none;
	cursor: pointer;
	display: inline-block;
	text-align: center;
	text-shadow: 0px 1px 1px rgba(0,0,0,1);
	line-height: 1;
}
/***************************FOLLOW US******************************/
#followUs {
	margin:8px auto 0 auto;
	width:144px;
	height:32px;
	padding:10px 8px 10px 10px;
	background:url(images/socialMediaBg.png);
}
#followUs ul {
	margin:-3px 0 0 0;
	padding:0;
	display:inline-block;
}
#followUs li {
	list-style:none;
	margin:0 0 0 0;
	display:inline-block;
	padding:0;
	text-align:left;
	height:32px;
	width:32px;
}
#followUs li a {
	text-indent: -9999em;
	height:32px;
	width:32px;
	display:block;
	background:url(images/socialMediaIcons.png);
}
/*EMAIL*/
	#followUs li a.emailFollow{background-position:0 0;}
	#followUs li a.emailFollow:hover{background-position:-32px 0;}
	#followUs li a.emailFollow:active{background-position:-32px 0;}
/*FACEBOOK*/
	#followUs li a.facebookFollow{background-position:0 -32px;}
	#followUs li a.facebookFollow:hover{background-position:-32px -32px;}
	#followUs li a.facebookFollow:active{background-position:-32px -32px;}
/*TWITTER*/
	#followUs li a.twitterFollow{background-position:0 -64px;}
	#followUs li a.twitterFollow:hover{background-position:-32px -64px;}
	#followUs li a.twitterFollow:active{background-position:-32px -64px;}
/*EMAIL*/
	#followUs li a.rssFollow{background-position:0 -96px;}
	#followUs li a.rssFollow:hover{background-position:-32px -96px;}
	#followUs li a.rssFollow:active{background-position:-32px -96px;}
/***************************PRINT STYLES******************************/
.print, #printBar {
	display:none;
}
/**************************FEATURES POST******************************/
.featuresPost {
	 border-bottom:1px solid #892846;
	 margin:10px 0 10px 0;
	 padding:5px 0 5px 0;
	 font:bold 12px Arial, Helvetica, sans-serif;
}
.featuresPost h2 a {
	font:24px "Arial Black", Gadget, sans-serif;
	text-transform:uppercase;
}
.featuresPost h2 a:link, .featuresPost h2 a:visited {
	color:#000;
	text-decoration:none;
}
.featuresPost h2 a:hover {
	color:#892846;
	text-decoration:none;
}
.featuresPost h2 a:active {
	color:#892846;
	text-decoration:underline;
}
.featuresPost .timestamp {
	font:24px Arial, Helvetica, sans-serif;
	color:#892846;
}
/* ... */

